--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ajanthasingam",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "firebase": "^5.5.4",
     "firebase-admin": "^6.0.0"
